--- a/src/index.hbs
+++ b/src/index.hbs
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Links page</title>
+    <link rel="stylesheet" href="~/src/index.scss">
 </head>
 <body>
-<p><a href="./pages/login.hbs">Login</a></p>
+    <p><a href="./pages/login.hbs">Login</a></p>
 <p><a href="./pages/signin.hbs">Signin</a></p>
+<p><a href="pages/profile.hbs">Profile</a></p>
+<p><a href="pages/chats.hbs">Chats (dummy)</a></p>
+<p><a href="./pages/404.hbs">404</a></p>
+<p><a href="./pages/500.hbs">500</a></p>
 </body>
 </html>
