--- a/src/pages/500.hbs
+++ b/src/pages/500.hbs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>500</title>
+    <link rel="stylesheet" href="~/src/index.scss">
 </head>
 <body>
     <div>
