--- a/src/pages/chats.hbs
+++ b/src/pages/chats.hbs
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="~/src/index.scss">
 </head>
 <body>
-<p>Здесь пока ничего нет...</p>
+<div class="app">
+    <div class="block-center">
+        <p>Здесь пока ничего нет...</p>
+    </div>
+</div>
 </body>
 </html>
