--- a/src/partials/input.hbs
+++ b/src/partials/input.hbs
@@ -1,1 +1,3 @@
-<input type="text" name="{{ name }}" placeholder="{{ label }}">
+<div class="underlined">
+    <input type="text" class="input" name="{{ name }}" placeholder="{{ label }}">
+</div>
