--- a/src/index.hbs
+++ b/src/index.hbs
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Links page</title>
-    <link rel="stylesheet" href="~/src/index.scss">
+    <link rel="stylesheet" href="./index.scss">
 </head>
 <body>
-    <p><a href="./pages/login.hbs">Login</a></p>
-<p><a href="./pages/signin.hbs">Signin</a></p>
-<p><a href="pages/profile.hbs">Profile</a></p>
-<p><a href="pages/chats.hbs">Chats (dummy)</a></p>
-<p><a href="./pages/404.hbs">404</a></p>
-<p><a href="./pages/500.hbs">500</a></p>
+<div class="app">
+    <form class="form">
+        <div><a href="./pages/login.hbs">Login</a></div>
+        <div><a href="./pages/signin.hbs">Signin</a></div>
+        <div><a href="./pages/profile.hbs">Profile</a></div>
+        <div><a href="./pages/chats.hbs">Chats (dummy)</a></div>
+        <div><a href="./pages/404.hbs">404</a></div>
+        <div><a href="./pages/500.hbs">500</a></div>
+    </form>
+</div>
 </body>
 </html>
