--- a/src/pages/404.hbs
+++ b/src/pages/404.hbs
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="~/src/index.scss">
 </head>
 <body>
-    <div>
-        <p>404</p>
-        <p>Не туда попали</p>
+<div class="app">
+    <div class="block-center">
+        <p class="text fs40px">404</p>
+        <p class="text fs20px">Не туда попали</p>
         <a href="#">Назад к чатам</a>
     </div>
+</div>
 </body>
 </html>
