--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -4,7 +4,7 @@
   border: none;
   cursor: pointer;
   color: #fff;
-  background: #3369F3;
+  background: #3369f3;
   height: 37px;
   width: 280px;
   border-radius: 8px;
