--- a/src/pages/Profile/profile.module.scss
+++ b/src/pages/Profile/profile.module.scss
@@ -2,5 +2,5 @@
   display: flex;
   justify-content: space-between;
   width: 510px;
-  border-bottom: 1px solid #EAEAEA;
+  border-bottom: 1px solid #eaeaea;
 }
