--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,18 @@
-@import url("./partials/button.scss");
-@import url("./partials/input.scss");
-@import url("./partials/linput.scss");
-
 body {
+  display: flex;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
   margin: 0;
   font: 13px/1.5 sans-serif;
 }
 
-.app {
+#app {
   display: flex;
+  flex-grow: 1;
   width: 100%;
-  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .form {
@@ -24,7 +24,7 @@ body {
   background: #fff;
   align-items: center;
   border-radius: 12px;
-  box-shadow: 0px 0px 6px 0px #00000024;
+  box-shadow: 0 0 6px 0 #00000024;
 }
 
 .form > * {
@@ -32,11 +32,11 @@ body {
 }
 
 .underlined {
-  border-bottom: 1px solid #3369F3;
+  border-bottom: 1px solid #3369f3;
 }
 
 .text {
-  color: #1E1E1E;
+  color: #1e1e1e;
 }
 
 .fs40px {
