--- a/src/pages/Login/login.hbs
+++ b/src/pages/Login/login.hbs
@@ -1,7 +1,7 @@
 <div class="form">
-  <h1>{{title}}</h1>
+  <h1>Вход</h1>
   {{{loginInput}}}
   {{{passwordInput}}}
   {{{button}}}
-  <a href="#">Нет аккаунта?</a>
+  {{{link}}}
 </div>
