--- a/src/pages/Error/error.hbs
+++ b/src/pages/Error/error.hbs
@@ -1,5 +1,5 @@
 <div class="{{styles.blockcenter}}">
   <p class="{{styles.text}} {{styles.fs40px}}">404</p>
   <p class="{{styles.text}} {{styles.fs20px}}">Не туда попали</p>
-  <a href="#">Назад к чатам</a>
+  <a href="/">Назад к чатам</a>
 </div>
