--- a/src/components/Messenger/messenger.module.scss
+++ b/src/components/Messenger/messenger.module.scss
@@ -1,20 +1,24 @@
 .messenger {
   display: flex;
+  flex-grow: 1;
   flex-flow: column nowrap;
   width: 100%;
-  padding: 10px 30px;
 }
 
 .messenger-messages {
   display: flex;
+  height: 100%;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 .messenger-footer {
   display: flex;
-  flex-flow: row nowrap;
-  width: 100%;
-  margin-top: auto;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5px;
+  height: 52px;
+  border-top: var(--light-grey-border) 1px solid;
 }
 
 .messenger-footer input {
