--- a/src/components/Avatar/avatar.hbs
+++ b/src/components/Avatar/avatar.hbs
@@ -1,4 +1,4 @@
 <div class="{{styles.avatar-container}}">
-  <img alt="avatar" class="{{styles.avatar}}" src="{{avatar}}">
+  <img alt="avatar" class="{{styles.avatar-elem}}" src="{{avatar}}">
   <div class="{{styles.avatar-hint}}">Поменять аватар</div>
 </div>
