--- a/src/pages/EditData/editData.hbs
+++ b/src/pages/EditData/editData.hbs
@@ -1,4 +1,4 @@
-<div class="form">
+<div class="{{styles.form}}">
   <img alt="avatar" class="{{styles.avatar}}" src={{avatar}}>
   <div class="{{styles.linput}}">
     <label>Почта</label>
