--- a/src/pages/EditPassword/editPassword.hbs
+++ b/src/pages/EditPassword/editPassword.hbs
@@ -1,4 +1,4 @@
-<div class="form">
+<div class="{{styles.form}}">
   <div class="{{styles.linput}}">
     <label>Старый пароль</label>
     {{{oldPasswordInput}}}
