--- a/src/pages/Profile/profile.hbs
+++ b/src/pages/Profile/profile.hbs
@@ -1,5 +1,5 @@
-<div class="form">
-  {{{avatar}}}
+<div class="{{styles.form}}">
+  {{{avatarElem}}}
   <div class="{{styles.linput}}">
     <label>Почта</label>
     <label>{{email}}</label>
