--- a/src/pages/Profile/profile.module.scss
+++ b/src/pages/Profile/profile.module.scss
@@ -1,6 +1,2 @@
-.linput {
-  display: flex;
-  justify-content: space-between;
-  width: 510px;
-  border-bottom: 1px solid var(--light-grey-border);
-}
+@import "../../common.scss";
+
